tests/snapshots/frame_snapshots__frame_at_a_wide_terminal.snap
---
source: tests/frame_snapshots.rs
expression: "frame(120, 24, source)"
---
┌fixture.md────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                   Reading Markdown                                                                                   │
│                   ────────────────                                                                                   │
│                                                                                                                      │
│                   A paragraph with emphasis, strong text, a retraction, some inline code, and a                      │
│                   relative link.                                                                                     │
│                                                                                                                      │
│                   │ A quotation that runs long enough to wrap at narrow measures, so the bar                         │
│                   │ prefix is exercised on more than one line.                                                       │
│                   │                                                                                                  │
│                   │ A second paragraph inside the same quote.                                                        │
│                                                                                                                      │
│                   ────────────────────────────────────────────────────────────────────────────────                   │
│                                                                                                                      │
│                   Section Two                                                                                        │
│                                                                                                                      │
│                   Another paragraph. A very long unbroken token follows to exercise the hard-split                   │
│                   path: https://example.com/an/extremely/long/path/that/will/not/fit                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
fixture.md  All  q quit  ? help
