tests/snapshots/frame_snapshots__frame_with_a_table_stays_inside_its_borders.snap
---
source: tests/frame_snapshots.rs
expression: "frame(80, 20, source)"
---
┌fixture.md────────────────────────────────────────────────────────────────────┐
│Tables                                                                        │
│──────                                                                        │
│                                                                              │
│┌─────────────┬────────┬────────────────────────────┐                         │
││ Option      │  Type  │                Description │                         │
│├─────────────┼────────┼────────────────────────────┤                         │
││ theme       │ string │        Colour theme to use │                         │
││ max_measure │ number │ Widest the text may become │                         │
│└─────────────┴────────┴────────────────────────────┘                         │
│                                                                              │
│┌───┐                                                                         │
││ a │                                                                         │
│├───┤                                                                         │
│└───┘                                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
fixture.md  All  q quit  ? help
