tests/snapshots/frame_snapshots__search_highlights_a_match_that_crosses_styled_spans.snap
---
source: tests/frame_snapshots.rs
expression: "highlight_mask(&draw_app(&app, 80, 24))"
---
................................................................................
................................................................................
................................................................................
................................................................................
........................###########.............................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
