tests/snapshots/frame_snapshots__search_mask.snap
---
source: tests/frame_snapshots.rs
expression: highlight_mask(&terminal)
---
................................................................................
................................................................................
................................................................................
................................................................................
....#########...................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
.............~~~~~~~~~..........................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
..........~~~~~~~~~.............................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
